# tiny-auth

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  build.rs
src/rust/: Cargo.toml  about.toml  clippy.toml
src/rust/.config/: nextest.toml  test-env.sh
src/rust/.sqlx/: query-06c9940d380df126eca690facce54d6339fce276ad3ca74b8335603a2c7d9d7b.json  query-0b6f4704b8b2324d1b7497104e9c9a9a4db24062417e4b46eaa4998d6f1e02f3.json  query-1e248d45e1f6878a5b2cdfbd1995bf03c8563e42cd421b87f6c344fcef4aebe2.json  query-255a48834194aaee5f32350787639d07905d99841efc066387f158e18931cfcc.json  query-2ab36812630fb9e9395c0e198125f249bcaa8358a5ffa51e701134a7e7e1cb5b.json  query-31aed2638dd0941660100e5e7ae491f6b1d3f5b05b1ea40836edd19047530788.json  query-328ae3ff1788e094fa13ac27e6b6725778806dad1e7f64cd1fae5414745bfa91.json  query-3d3aba1b8596261c772517ebf8e913e1ec12e899a2e55bbf30757c19f8a3ab84.json  query-621b2fa9f7cc2426008c719c21d1e3c16b469a1857d6b96ec2cbb1494339757f.json  query-6361b0b8b106ffbfecee8c60c65c02f5c6347cec2b876f76dbb5f05ad5d1a778.json  query-6750cf7dab546afc21ae0e1ac5fef4213dee52bfedcb9e5f83956f39ee9833ee.json  query-6ec3eb33d2b3bf708b3163e66fd4c06e0c031932541e72fbd86ab9b3fa0fb8de.json  query-72ee0c657d7e02a8edcf7b8bef3f8373e1cf895c9a4360ef260921147992ddf7.json  query-7bb0b84e8ba0a0272b1924645fed363c06d6f2ee0fffefb7b8eb8adc178b185a.json  query-7bec5a3dc3ae2f2f0ac55352a5cc2ed02cec75d9e8f1fb18ef6105efe813739d.json  query-822ae07d4783158bc1912bb623e5107cc9002d519e1143a9c200ed6ee18b6d0f.json  query-836cca48734b10d53e8019aadb29ef876dcb7b168c1fc2779b7b85cd10277552.json  query-8cae1fdadd5035668e194f75a1c970628d59c2c0d92729375950d6d866ca50a6.json  query-8db302bd746ad726839afcd1229b8be16aaf8ca27f643d45aab466e04fd318ed.json  query-9176bbe573ace7af3815dfef0753a8e0574e64c1c11be6512098cf7fe822d95a.json  query-960bd7d2618579c50f82f9e81448cd10ddb15bfe4f36cd93ad419fbcdd1e317e.json  query-9b6644c2b25f58a73cb94a22a69d3a4d21aae2090fec8e4bf8bd623cfa05d8fe.json  query-9bbdcf52044e77de9ef38b7c8bbae91d0e95321e26c0ea6283d46a470c482654.json  query-9d51960c3d9717dbded71121b7360c74bc047aa96f5c903b762d5e67221f4e5f.json  query-a3b839d6d71efeccc8e37cffda327f62035b1f711ce7f1958269cdbb10dfe0fe.json  query-a681e2a8ce7d321a9cec6c0ff14952cc1ee8cd3efc8b756a967b4ab4816512d3.json  query-aa9e2501eb5a8be2392ea699f5de279ca3f6e03dfed68ff03bd653830475e0b8.json  query-aaa60d3e1b32f24972ee2169f1c7eebac4751ab836db1dba64421ee4b1127e9b.json  query-ae7ccaa3228ef4ca4b20a0d7ba37676e5673383384d62c1f709bf22c3abefecb.json  query-b9649b18e3e158563655325128ddb22da878f7e88051d9b12f336a7eb63e331e.json  query-b9d5bd5254a9b188896e09c52eabafe21eea751217120130d0f887e97ebba548.json  query-be1a2e1bfd3f22537b2e0b87012db50ad0ed775f4aa78090435610f1c304a943.json  query-be5f23ca514e4a9b45b79bf03ad818e239fc752517579d388dca04abab2f8031.json  query-c14fc5dd6eeb4a39b3820accc3e66e1b9d9a9c1d1ced54ffe5595f457b0ac3b9.json  query-d9638212977c7b35a991e51afe3cdd858c22f1dc1435f699e0070c83d2e65ba8.json  query-dad04cb544094d6e72fe32f7d6e80cbd4b0cc22fc623348ef26669315bf30bb1.json  query-dc8fddd37c80020b54ed839537d0ebb9314a06f2a6e8ef65e649cb0fc0178b54.json  query-ddf61779d1b2bdfa1bf815540eb8d7a6b67db1791cde4ededd51153753482343.json  query-e88949b387f52c5ef229305155e874cf31bbbf927ad98cd2523dc1037f7126d7.json  query-f733296f3219ef74e75743ee46b9bd30876949b6e9e4272f1893a52c4d695bcc.json  (+3 more)
src/rust/api/: Cargo.toml  build.rs
src/rust/api/src/: api.rs  auth.rs  change_password.rs  lib.rs
src/rust/business/: Cargo.toml  authenticator.rs  authorize_endpoint.rs  change_password.rs  client.rs  consent.rs  cors.rs  data_loader.rs  data_loader_test.rs  health.rs  json_pointer.rs  lib.rs  oauth2.rs  password.rs  pkce.rs  rate_limiter.rs  scope.rs  token.rs  token_endpoint.rs  user.rs  userinfo_endpoint.rs
src/rust/business/data/: client.rs  password.rs  scope.rs  user.rs
src/rust/business/src/: authenticator.rs  authorize_endpoint.rs  change_password.rs  client.rs  clock.rs  consent.rs  cors.rs  data_loader.rs  data_loader_test.rs  health.rs  issuer_configuration.rs  json_pointer.rs  jwk.rs  lib.rs  oauth2.rs  oidc.rs  password.rs  pkce.rs  rate_limiter.rs  scope.rs  serde.rs  templater.rs  token.rs  token_endpoint.rs  user.rs  userinfo_endpoint.rs  util.rs
src/rust/business/store/: client_store.rs  memory.rs  mod.rs  user_store.rs
src/rust/business/template/: data_loader.rs  ldap_search.rs  mod.rs  scope.rs  test_fixtures.rs  web.rs
src/rust/business/tests/: authenticator.rs  authorize_endpoint.rs  consent.rs  tests.rs  token.rs  token_endpoint.rs
src/rust/ldap/: Cargo.toml  authenticate.rs  connect.rs  error.rs  health.rs  inject.rs  lib.rs  store.rs  test.rs
src/rust/ldap/lookup/: client_lookup.rs  mod.rs  user_lookup.rs
src/rust/ldap/src/: authenticate.rs  client_lookup.rs  connect.rs  error.rs  health.rs  inject.rs  lib.rs  store.rs  test.rs  user_lookup.rs
src/rust/main/: Cargo.toml
src/rust/main/src/: cli_parser.rs  constructor.rs  lib.rs  logging.rs  runtime.rs  systemd.rs  terminate.rs  util.rs
src/rust/sqlite/: Cargo.toml  auth_code_store.rs  begin_immediate.rs  client_store.rs  data_assembler.rs  error.rs  health.rs  inject.rs  lib.rs  password_store.rs  scope_store.rs  store.rs  test.rs  user_store.rs
src/rust/sqlite/queries/: delete-authorization-code.sql  delete-expired-authorization-codes.sql  get-authorization-code.sql  get-client-redirect-uris.sql  get-client-scopes.sql  get-password-ldap.sql  get-password-pbkdf2hmacsha256.sql  get-password.sql  get-scope-mappings-client-attribute.sql  get-scope-mappings-plain.sql  get-scope-mappings-template.sql  get-scope-mappings-user-attribute.sql  get-scope-mappings.sql  get-scope-names.sql  get-scopes.sql  get-user-scopes.sql  insert-authorization-code.sql  insert-password-password.sql  insert-password-pbkdf2hmacsha256.sql  insert-password.sql  update-password-pbkdf2hmacsha256.sql
src/rust/sqlite/src/: client_store.rs  (+10 more)
src/rust/template/: Cargo.toml  inject.rs  tera.rs  test.rs  web.rs
src/rust/test-fixtures/: Cargo.toml
src/rust/web/: Cargo.toml  lib.rs  session.rs
(+368 files in other folders)
