[package]
name = "tiny-auth"
version = "0.1.0"
authors = ["Jan Veen <jan.veen@posteo.de>"]
description = "Tiny OIDC Provider"

license = "GPL-3.0-or-later"
build = "build.rs"
edition = "2018"

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1

[[bin]]
name = "tiny-auth"
path = "src/bin/tiny-auth.rs"

[[bin]]
name = "tiny-auth-password-encoder"
path = "src/bin/password-encoder.rs"

[dependencies]
clap = "2.27.0"
log = "0.4"
serde_derive = "1.0"
serde_yaml = "0.8.7"
serde_json = "1.0.40"
serde_urlencoded = "0.6.1"
chrono = "0.4.6"
actix-rt = "1.0"
actix-session = "0.3"
url = "2.1.1"
futures = "0.3"
tera = "1.3.0"
base64 = "0.12.1"
systemd = "0.4"
jsonwebtoken = "7.1.2"
rand = "0.7.3"
async-trait = "0.1.36"

[dependencies.ring]
version = "0.16.15"
features = ["alloc", "std"]

[dependencies.tokio]
version = "0.2"
features = ["full"]

[dependencies.actix-web]
version = "2.0"
features = ["openssl"]

[dependencies.openssl]
version = "0.10"
features = ["v110"]

[dependencies.uuid]
version = "0.8.1"
features = ["v4", "serde"]

[dependencies.serde]
version = "1.0.80"
features = ["derive"]

[dependencies.log4rs]
version = "0.11.0"
default-features = false
features = ["yaml_format", "file", "pattern_encoder", "console_appender"]

[build-dependencies]
vergen = "3"
