[package]
name = "tiny-auth"
version = "0.8.2"
authors = ["Jan Veen <jan.veen@posteo.de>"]
description = "Tiny OIDC Provider"
homepage = "https://gitlab.com/veenj/tiny-auth/-/blob/master/doc/README.md"

license = "GPL-3.0-or-later"
build = "build.rs"
edition = "2018"

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1

[[bin]]
name = "tiny-auth"
path = "src/bin/tiny-auth.rs"

[[bin]]
name = "tiny-auth-password-encoder"
path = "src/bin/password-encoder.rs"

[[bin]]
name = "tiny-auth-scope-debugger"
path = "src/bin/scope-debugger.rs"

[dependencies]
clap = "2.33.3"
log = "0.4.11"
serde_derive = "1.0.115"
serde_yaml = "0.8.7"
serde_json = "1.0.57"
serde_urlencoded = "0.7.0"
chrono = "0.4.15"
regex = "1.3.9"
url = "2.1.1"
futures = "0.3"
tera = "1.5.0"
base64 = "0.12.3"
systemd = "0.8.2"
jsonwebtoken = "7.2.0"
rand = "0.8.3"
async-trait = "0.1.40"
rustls = "0.18.0"
thiserror = "1.0.24"
cookie = "0.15"
time = "0.2.26"

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket.git"
branch = "master"
features = ["secrets", "tls"]

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket.git"
branch = "master"
features = ["json", "serve"]

[dependencies.openssl]
version = "0.10"
features = ["v110"]

[dependencies.ring]
version = "0.16.15"
features = ["alloc", "std"]

[dependencies.tokio]
version = "1.4.0"
features = ["full"]

[dependencies.uuid]
version = "0.8.1"
features = ["v4", "serde"]

[dependencies.serde]
version = "1.0.115"
features = ["derive"]

[dependencies.log4rs]
version = "1.0"

[build-dependencies]
vergen = "4"
