[workspace]
members = ["main", "business", "web", "api"]
resolver = "2"

[workspace.package]
version = "0.8.2"
authors = ["Jan Veen <jan.veen@posteo.de>"]
description = "Tiny OIDC Provider"
homepage = "https://j.njsm.de/git/veenj/tiny-auth/src/branch/master/README.md"

license = "GPL-3.0-or-later"
edition = "2021"

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1

[workspace.dependencies]
clap = "4.3.8"
log = "0.4.19"
serde_derive = "1.0.164"
serde_yaml = "0.9.22"
serde_json = "1.0.99"
serde_urlencoded = "0.7.1"
chrono = "0.4.15"
regex = "1.3.9"
actix-rt = "2.8.0"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-files = "0.6.2"
url = "2.1.1"
futures = "0.3"
tera = "1.5.0"
base64 = "0.21.2"
systemd = "0.10.0"
jsonwebtoken = "8.3.0"
rand = "0.8.5"
async-trait = "0.1.40"
rustls = { version = "0.20.8", features = ["dangerous_configuration"]}
rustls-pemfile = "1.0.2"
test-log = "0.2.12"
env_logger = "*"
tonic = { version = "0.9.2", features = ["transport", "tls"] }
prost = "0.11.9"
tonic-build = "0.9.2"
thiserror = "1.0.40"

[workspace.dependencies.openssl]
version = "0.10"
features = ["v110"]

[workspace.dependencies.ring]
version = "0.16.15"
features = ["alloc", "std"]

[workspace.dependencies.tokio]
version = "1.28.2"
features = ["full"]

[workspace.dependencies.tokio-stream]
version = "0.1.14"
features = ["net"]

[workspace.dependencies.actix-web]
version = "4.3.1"
features = ["rustls"]

[workspace.dependencies.uuid]
version = "1.3.4"
features = ["v4", "serde"]

[workspace.dependencies.serde]
version = "1.0.164"
features = ["derive"]

[workspace.dependencies.log4rs]
version = "1.2.0"
default-features = false
features = ["yaml_format", "file_appender", "config_parsing", "pattern_encoder", "json_encoder", "console_appender"]

[workspace.dependencies.vergen]
version = "8"
features = ["build", "git", "git2"]
