[workspace]
members = ["main", "business", "web", "api", "ldap", "template", "sqlite"]
resolver = "2"

[workspace.package]
version = "2.0.0"
authors = ["Jan Veen <jan.veen@posteo.de>"]
description = "Tiny OIDC Provider"
homepage = "https://veenj.de/git/veenj/tiny-auth/src/branch/master/README.md"

license = "GPL-3.0-or-later"
edition = "2021"

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1

[workspace.dependencies]
clap = "4.3.8"
serde_derive = "1.0.164"
serde_yaml = "0.9.22"
serde_json = "1.0.99"
serde_urlencoded = "0.7.1"
chrono = "0.4.15"
regex = "1.3.9"
actix-rt = "2.8.0"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-files = "0.6.2"
tower-http = { version = "0.4.4", features = ["cors"] }
tower = { version = "0.4.4" }
pin-project-lite = "0.2.13"
http = "0.2.11"
url = { version = "2.1.1", features = ["serde"] }
futures = "0.3"
tera = "1.5.0"
base64 = "0.21.2"
jsonwebtoken = "8.3.0"
rand = "0.8.5"
async-trait = "0.1.40"
rustls = "0.23.11"
rustls-pemfile = "1.0.2"
test-log = "0.2.12"
env_logger = "0.11.3"
systemd = "0.10.0"
tonic = { version = "0.10.2", features = ["transport", "tls"] }
tonic-reflection = "0.10.2"
tonic-web = "0.10.2"
prost = "0.12"
tonic-build = "0.10.2"
thiserror = "1.0.40"
ldap3 = { version = "0.11.3", default-features = false, features = ["sync", "tls-rustls"] }
testcontainers = "0.15.0"
pretty_assertions = "1.4.0"
rstest = "0.19.0"
enum_dispatch = "0.3.13"
futures-util = "0.3.30"
moka = { version = "0.12.7", features = ["future"] }
tracing-log = "0.2.0"

[workspace.dependencies.tracing-actix-web]
version = "0.7"
features = ["opentelemetry_0_23", "emit_event_on_error"]

[workspace.dependencies.openssl]
version = "0.10"
features = ["v110"]

[workspace.dependencies.ring]
version = "0.16.15"
features = ["alloc", "std"]

[workspace.dependencies.tokio]
version = "1.28.2"
features = ["full"]

[workspace.dependencies.tokio-stream]
version = "0.1.14"
features = ["net"]

[workspace.dependencies.actix-web]
version = "4.8.0"
features = ["rustls-0_23"]

[workspace.dependencies.uuid]
version = "1.3.4"
features = ["v4", "serde"]

[workspace.dependencies.serde]
version = "1.0.164"
features = ["derive"]

[workspace.dependencies.tracing-subscriber]
version = "0.3.18"
default-features = false
features = ["std", "env-filter", "fmt", "ansi", "registry", "json", "chrono", "parking_lot"]

[workspace.dependencies.tracing]
version = "0.1.40"
default-features = false
features = ["attributes", "std"]

[workspace.dependencies.vergen]
version = "8"
features = ["build", "git", "git2"]

[workspace.dependencies.notify]
version = "6"
default-features = false
features = ["macos_kqueue"]

[workspace.dependencies.sqlx]
version = "0.8"
default-features = false
features = ["runtime-tokio", "sqlite", "macros"]
