[package]
name = "tiny_auth_api"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true
build = "build.rs"

[lib]

[dependencies]
tonic.workspace = true
prost.workspace = true
log.workspace = true
async-trait.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
thiserror.workspace = true

[build-dependencies]
tonic-build.workspace = true