[package]
name = "tiny_auth_api"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true
build = "build.rs"

[lib]

[dependencies]
tiny_auth_business = { path = "../business" }

tonic.workspace = true
tonic-reflection.workspace = true
tonic-web.workspace = true
prost.workspace = true
tracing.workspace = true
async-trait.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
thiserror.workspace = true
tower-http.workspace = true
tower.workspace = true
http.workspace = true
pin-project-lite.workspace = true

[build-dependencies]
tonic-build.workspace = true

[lints]
workspace = true
