[package]
name = "tiny_auth_business"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true

[lib]

[dependencies]
chrono.workspace = true
tokio.workspace = true
ring.workspace = true
base64.workspace = true
rand.workspace = true
serde.workspace = true
serde_derive.workspace = true
log.workspace = true