[package]
name = "tiny_auth_business"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true

[lib]

[dependencies]
chrono.workspace = true
tokio.workspace = true
ring.workspace = true
base64.workspace = true
rand.workspace = true
serde.workspace = true
serde_derive.workspace = true
tracing.workspace = true
async-trait.workspace = true
jsonwebtoken.workspace = true
tera.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
url.workspace = true
thiserror.workspace = true
test-log.workspace = true
env_logger.workspace = true
regex.workspace = true
futures-util.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
rstest.workspace = true
