[package]
name = "tiny_auth_ldap"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true

[lib]

[dependencies]
tiny_auth_business = { path = "../business" }
url.workspace = true
ldap3.workspace = true
tracing.workspace = true
tera.workspace = true
thiserror.workspace = true
test-log.workspace = true
tokio.workspace = true
async-trait.workspace = true
enum_dispatch.workspace = true
moka.workspace = true
serde_json.workspace = true
futures.workspace = true

[dev-dependencies]
testcontainers.workspace = true
pretty_assertions.workspace = true
rstest.workspace = true
