[package]
name = "tiny_auth_main"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true
build = "build.rs"

[[bin]]
name = "tiny-auth"
path = "src/programs/tiny-auth.rs"

[[bin]]
name = "tiny-auth-password-encoder"
path = "src/programs/password-encoder.rs"

[[bin]]
name = "tiny-auth-scope-debugger"
path = "src/programs/scope-debugger.rs"

[dependencies]
tiny_auth_business = { path = "../business" }
tiny_auth_web = { path = "../web" }
tiny_auth_api = { path = "../api" }

clap.workspace = true
log.workspace = true
serde_derive.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
chrono.workspace = true
regex.workspace = true
actix-rt.workspace = true
tera.workspace = true
base64.workspace = true
systemd.workspace = true
jsonwebtoken.workspace = true
rustls.workspace = true
openssl.workspace = true
tokio.workspace = true
actix-web.workspace = true
serde.workspace = true
log4rs.workspace = true
test-log.workspace = true
env_logger.workspace = true
thiserror.workspace = true

[build-dependencies]
vergen.workspace = true
