[package]
name = "tiny_auth_main"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true
build = "build.rs"

[[bin]]
name = "tiny-auth"
path = "src/programs/tiny-auth.rs"

[[bin]]
name = "tiny-auth-password-encoder"
path = "src/programs/password-encoder.rs"

[[bin]]
name = "tiny-auth-scope-debugger"
path = "src/programs/scope-debugger.rs"

[dependencies]
tiny_auth_business = { path = "../business" }
tiny_auth_web = { path = "../web" }
tiny_auth_api = { path = "../api" }
tiny_auth_ldap = { path = "../ldap" }

clap.workspace = true
serde.workspace = true
serde_derive.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
regex.workspace = true
tokio.workspace = true
actix-rt.workspace = true
actix-web.workspace = true
tera.workspace = true
base64.workspace = true
jsonwebtoken.workspace = true
rustls.workspace = true
openssl.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-log.workspace = true
test-log.workspace = true
env_logger.workspace = true
url.workspace = true
async-trait.workspace = true
notify.workspace = true
futures.workspace = true
futures-util.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
systemd.workspace = true

[build-dependencies]
vergen.workspace = true
