[package]
name = "tiny_auth_sqlite"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true

[lib]
path = "./lib.rs"

[dependencies]
tiny_auth_business = { path = "../business" }
tracing.workspace = true
thiserror.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde_json.workspace = true
futures.workspace = true
sqlx.workspace = true
chrono.workspace = true
base64.workspace = true
itertools.workspace = true
url.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
rstest.workspace = true
test-log.workspace = true

[lints]
workspace = true
