[package]
name = "tiny_auth_web"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true

[lib]

[dependencies]
tiny_auth_business = { path = "../business" }

actix-web.workspace = true
log.workspace = true
