[package]
name = "tiny_auth_web"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true

[lib]

[dependencies]
tiny_auth_business = { path = "../business" }

actix-rt.workspace = true
actix-web.workspace = true
actix-files.workspace = true
actix-session.workspace = true
tracing.workspace = true
serde.workspace = true
serde_derive.workspace = true
serde_urlencoded.workspace = true
serde_json.workspace = true
url.workspace = true
base64.workspace = true
chrono.workspace = true
tokio.workspace = true
jsonwebtoken.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
thiserror.workspace = true
tracing-actix-web.workspace = true

[dev-dependencies]
test-log.workspace = true
env_logger.workspace = true
pretty_assertions.workspace = true

[lints]
workspace = true
